# ks-perm-test

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml
include/: kspt.hpp
kspt/: __init__.py  kspt.py
notebooks/: seq_of_normals_example.ipynb
src/: kspt.cpp  pybind11.cpp
