[build-system]
requires = [
    "scikit_build_core<0.12",  # last version compatible with Python 3.10
    "pybind11>=2.11.1,<2.14"
]
build-backend = "scikit_build_core.build"

[project]
name = "kspt"
description = "Kolmogorov-Smirnov permutation tests"
version = "0.0.1"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy"
]

[project.optional-dependencies]
notebooks = [
    "matplotlib", 
    "scipy"
]